[gd_scene load_steps=4 format=3 uid="uid://dceesn34rp3rw"]

[ext_resource type="Script" path="res://scripts/audio_manager.gd" id="1_ynq2t"]
[ext_resource type="AudioStream" uid="uid://dno302nx6kqce" path="res://assets/music/I Just Started a Forest Fire, Theres Nothing Wrong with That, RIGHT, no Helicopters Chasing me or Anything Like That.wav" id="2_4c21y"]
[ext_resource type="AudioStream" uid="uid://185burggge7g" path="res://assets/music/Im drifting through the forest in my elongated firetruck.wav" id="3_5ulgf"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_ynq2t")

[node name="Effects" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Effects"]
bus = &"effects"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Effects"]
bus = &"effects"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Effects"]
bus = &"effects"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="Effects"]
bus = &"effects"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="Effects"]
bus = &"effects"

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="Effects"]
bus = &"effects"

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="Effects"]
bus = &"effects"

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="Effects"]
bus = &"effects"

[node name="Music" type="Node" parent="."]

[node name="NormalMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("2_4c21y")
bus = &"music"

[node name="BossMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("3_5ulgf")
bus = &"music"

[connection signal="finished" from="Music/NormalMusic" to="." method="_on_normal_music_finished"]
[connection signal="finished" from="Music/BossMusic" to="." method="_on_boss_music_finished"]
